Fix "numeric issues" according to intellij
[#168714093]

Signed-off-by: Stephane Jolicoeur <sjolicoeur@pivotal.io>